exports[`Checkbox component snapshot renders basic required data 1`] = `
<label
  className=""
  htmlFor="UsersFilters-checkbox">
  <span
    className="checkbox_1gmevj5" />
  <input
    className="base_avg348"
    id="UsersFilters-checkbox"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value={false} />
  This is checkbox
</label>
`;

exports[`Checkbox component snapshot renders with additional styles and attributes 1`] = `
<label
  className="additional_1433df3"
  htmlFor="UsersFilters-checkbox">
  <span
    className="checkbox_1gmevj5" />
  <input
    className="base_avg348"
    disabled={true}
    id="UsersFilters-checkbox"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value={false} />
  This is checkbox
</label>
`;

exports[`Checkbox component snapshot renders with custom onChange event and checked 1`] = `
<label
  className=""
  htmlFor="UsersFilters-checkbox">
  <span
    className="checkbox_1gmevj5-o_O-checked_1ehyjl1">
    <i
      className="fa fa-check" />
  </span>
  <input
    className="base_avg348"
    id="UsersFilters-checkbox"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
    value={true} />
  This is checkbox
</label>
`;
